test/bad/generics/print02.px

func f<T>(x: T): Void def
    print 'x', x

f(write)
